STAT-feat-35a11.7: Added server option to hide players PM links from statistics page

--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -271,6 +271,10 @@
 
     <tr><td class="c" colspan="2">{L_adm_opt_stats_and_records}</td></tr>
     <tr>
+      <th><label for="stats_hide_pm_link">{L_adm_opt_stats_hide_pm_link}</label></th>
+      <th><input name="stats_hide_pm_link" id="stats_hide_pm_link" type="checkbox" value="1"<!-- IF STATS_HIDE_PM_LINK --> checked<!-- ENDIF --> /></th>
+    </tr>
+    <tr>
       <th>{L_adm_opt_stats_schedule}</th>
       <th>
         <input name="stats_schedule" size="40" maxlength="254" value="{C_stats_schedule}" type="text"><br />
