--- a/design/templates/OpenGame/simple_footer.tpl.html
+++ b/design/templates/OpenGame/simple_footer.tpl.html
@@ -1,6 +1,6 @@
 
     <div id="copyright" style="padding-top: 2ex;">
-      Project &quot;SuperNova.WS&quot; Release {D_SN_RELEASE} V{D_SN_VERSION} &copy; 2009-2012 Gorlum<br>
+      Project &quot;<a href="http://supernova.ws" style="font-weight: normal;">SuperNova.WS</a>&quot; Release {D_SN_RELEASE} V{D_SN_VERSION} &copy; 2009-2012 Gorlum<br>
       Based on XNova RageRepack v226
     </div>
 
