--- a/design/templates/OpenGame/ali_info.tpl.html
+++ b/design/templates/OpenGame/ali_info.tpl.html
@@ -29,15 +29,7 @@
   <tr>
     <th>{L_Members}</th>
     <th>
-      <!-- IF ALI_BONUS_MEMBERS -->
-        <!-- IF ALLY_MEMBERS >= ALI_BONUS_MEMBERS -->
-          <!-- DEFINE $ALLY_MEMBERS_CLASS = 'ok' -->
-        <!-- ELSE -->
-          <!-- DEFINE $ALLY_MEMBERS_CLASS = 'warning' -->
-        <!-- ENDIF -->
-      <!-- ENDIF -->
-      <span class="{$ALLY_MEMBERS_CLASS}">{ALLY_MEMBERS}<!-- IF ALI_BONUS_MEMBERS -->/{ALI_BONUS_MEMBERS} {L_ali_info_bonus_rate}: {ALLY_BONUS_RATE}<!-- ENDIF --></span>
-      <!-- IF ! EXTERNAL --><br /><a href="alliance.php?mode=memberslist">[ {Members_list} ]</a><!-- ENDIF -->
+      {ALLY_MEMBERS}<!-- IF ! EXTERNAL -->&nbsp;<a href="alliance.php?mode=memberslist" class="fr">[ {Members_list} ]</a><!-- ENDIF -->
     </th>
   </tr>
   <!-- IF EXTERNAL && ! USER_ALLY_ID -->
