--- a/design/templates/OpenGame/flying_fleets.tpl.html
+++ b/design/templates/OpenGame/flying_fleets.tpl.html
@@ -20,7 +20,7 @@ var speed_factor   = {speed_factor};
 <br>
 <table border='0' cellpadding='0' cellspacing='1'>
   <tr height='20' class='c'>
-    <td colspan=8 class='c'><div style="float: left">{fl_title}: {FLEETS_FLYING}/{FLEETS_MAX}</div><div align=right>{fl_expttl}: {EXPEDITIONS_FLYING}/{EXPEDITIONS_MAX}</div></td>
+    <td colspan=8 class='c'><div style="float: left">{L_fl_title}: {FLEETS_FLYING}/{FLEETS_MAX}</div><div align=right>{L_fl_expttl}: {EXPEDITIONS_FLYING}/{EXPEDITIONS_MAX}</div></td>
   </tr>
 
   <tr height='20'>
@@ -103,7 +103,7 @@ var speed_factor   = {speed_factor};
   <!-- END fleets -->
 
   <!-- IF FLEETS_FLYING >= FLEETS_MAX -->
-    <tr><th class="c_c negative" colspan="8">{fl_noslotfree}</th></tr>
+    <tr><th class="c_c negative" colspan="8">{L_fl_noslotfree}</th></tr>
   <!-- ELSE -->
     <tr><th class="c_c" colspan="8"><input type="button" value="{L_flt_gather_all}" onclick="document.location = 'fleet.php?fleet_page=5';"></th></tr>
   <!-- ENDIF -->
