--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -86,7 +86,7 @@ jQuery.noConflict();
         <!-- INCLUDE planet_governor -->
       </td>
 
-      <th width=100 align="center">{buildings_on_planet}</th>
+      <th width=100 align="center">{L_buildings_on_planet}</th>
       <th colspan="3" style="position: relative; padding: 0px; height: 100%;">
         <div style="position: relative; width: 100%; height: 100%; border: 1px solid rgb(153, 153, 255); ">
           <!-- IF PLANET_FILL >= 100 -->
@@ -111,7 +111,7 @@ jQuery.noConflict();
     </tr>
 
     <tr>
-      <th width=100>{orb}</th>
+      <th width=100>{L_orb}</th>
       <th colspan="3" id="fleetstatusrow">{L_sys_metal}: {metal_debris} / {L_sys_crystal}: {crystal_debris}
         <!-- IF PLANET_RECYCLERS -->
           <br><span id="ov_recycle" style="cursor: pointer" onclick="doit(MT_RECYCLE, {PLANET_PLANET}, {PLANET_TYPE});">[ {L_type_mission[8]} ]</span>
@@ -120,8 +120,8 @@ jQuery.noConflict();
       </th>
     </tr>
     <tr>
-      <th colspan="2">{Diameter}&nbsp;{planet_diameter}&nbsp;{km}</th>
-      <th colspan="2">{Temperature}&nbsp;{planet_temp_min}&deg;C&nbsp;/&nbsp;{planet_temp_max}&deg;C</th>
+      <th colspan="2">{L_Diameter}&nbsp;{planet_diameter}&nbsp;{L_km}</th>
+      <th colspan="2">{L_Temperature}&nbsp;{planet_temp_min}&deg;C&nbsp;/&nbsp;{planet_temp_max}&deg;C</th>
     </tr>
 
     </tr>
