NOTE-feat-35a12.4: Wrote Notes from scratch. Reworked Jumpgate interface. Also misc changes

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -440,3 +440,8 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   border-style: none;
   cursor: pointer;
 }
+
+#copyright #supernova_ws
+{
+  font-weight: normal;
+}
