--- a/design/templates/OpenGame/admin/admin_locale.tpl.html
+++ b/design/templates/OpenGame/admin/admin_locale.tpl.html
@@ -61,7 +61,7 @@ function addRow()
      <th class="c_c">X</th>
      <th class="c_l">{L_adm_lng_string_name}</th>
      <!-- BEGIN language -->
-       <script language="javascript">
+       <script type="text/javascript">
          lang_list['{language.LANG_NAME_ISO2}'] = '{language.LANG_NAME_ISO2}';
        </script>
        <th class="c_l">{language.LANG_NAME_NATIVE}</td>
