--- a/design/templates/OpenGame/admin/menu.tpl.html
+++ b/design/templates/OpenGame/admin/menu.tpl.html
@@ -59,6 +59,6 @@
   </table>
 </div>
 
-<script LANGUAGE='JavaScript'><!--
+<script type="text/javascript"><!--
   sn_timers.unshift({'id': 'server_time', 'type': 2, 'active': true, 'start_time': {SERVER_TIME}, options: 3});
 // --></script>
