--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -44,7 +44,7 @@ planet =
 var que_id = '{QUE_ID}';
 --></script>
 
-<script language="JavaScript" type="text/javascript" src="js/build_unit.js"></script>
+<script type="text/javascript" src="js/build_unit.js"></script>
 
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
