--- a/design/templates/OpenGame/msg_message_list.tpl.html
+++ b/design/templates/OpenGame/msg_message_list.tpl.html
@@ -1,4 +1,4 @@
-<script language="JavaScript">
+<script type="text/javascript">
   function f(target_url, win_name) 
   {
     var new_win = window.open(target_url,win_name,'resizable=yes,scrollbars=yes,menubar=no,toolbar=no,width=550,height=280,top=0,left=0');
