--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -1,5 +1,5 @@
 <!-- DEFINE $OVERVIEW = true -->
-<script language="JavaScript" src="js/sn_ajax_send_fleet.js"></script>
+<script type="text/javascript" src="js/sn_ajax_send_fleet.js"></script>
 <script type="text/javascript">
 
 // var SHIP_RECYCLER = {D_SHIP_RECYCLER};
