--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -125,7 +125,7 @@
   <!-- ENDIF -->
 </div>
 
-<script LANGUAGE='JavaScript'><!--
+<script type="text/javascript"><!--
   sn_timers.unshift({
     'id': 'top_time',
     'type': 2,
