--- a/design/css/login.css
+++ b/design/css/login.css
@@ -37,7 +37,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#log_main, #copyright {
+#log_main, #copyright
+{
   position: relative;
   background-repeat: no-repeat;
   border:1px solid #FFFFFF;
@@ -55,7 +56,7 @@ body {
   opacity              : 0.7;
 }
 
-#copyright
+#copyright, #copyright #supernova_ws
 {
   font-weight: bold;
 
@@ -88,7 +89,7 @@ body {
 }
 
 #log_register {
-  font-family:Arial, Helvetica, sans-serif;
+               font-family:Arial, Helvetica, sans-serif;
   font-size: 16px;
 
   padding: 0.3em;
