--- a/design/templates/OpenGame/_result_message.tpl.html
+++ b/design/templates/OpenGame/_result_message.tpl.html
@@ -1,12 +1,23 @@
-<!-- IF .result -->
-  <!-- BEGIN result -->
-    <!-- IF result.STATUS == 0 -->
-      <!-- DEFINE $RESULT_CLASS = 'positive' -->
-    <!-- ELSEIF result.STATUS == 1 -->
-      <!-- DEFINE $RESULT_CLASS = 'warning' -->
-    <!-- ELSE -->
-      <!-- DEFINE $RESULT_CLASS = 'error' -->
+<!-- BEGIN result -->
+  <!-- IF result.MESSAGE -->
+    <!-- IF ! $RESULT_TABLE_EXISTS -->
+      <!-- DEFINE $RESULT_TABLE_EXISTS = 'true' -->
+      <br />
+      <table width="519px">
+        <tr><th class="c_l">{L_sys_result_operation}</th></tr>
+        <tr><td class="c_l"><ul style="text-align: justify">
     <!-- ENDIF -->
-    <!-- IF result.MESSAGE --><h3 class="c_c {$RESULT_CLASS}">{result.MESSAGE}</h3><!-- ENDIF -->
-  <!-- END result -->
+      <!-- IF result.STATUS == 0 -->
+        <!-- DEFINE $RESULT_CLASS = 'positive' -->
+      <!-- ELSEIF result.STATUS == 1 -->
+        <!-- DEFINE $RESULT_CLASS = 'warning' -->
+      <!-- ELSE -->
+        <!-- DEFINE $RESULT_CLASS = 'error' -->
+      <!-- ENDIF -->
+          <li class="{$RESULT_CLASS}">{result.MESSAGE}</li>
+  <!-- ENDIF -->
+<!-- END result -->
+<!-- IF $RESULT_TABLE_EXISTS -->
+          </ul></td></tr>
+        </table>
 <!-- ENDIF -->
