BUD-misc-35a12.14: Misc template change

--- a/design/templates/OpenGame/buddy.tpl.html
+++ b/design/templates/OpenGame/buddy.tpl.html
@@ -72,7 +72,11 @@
     </td>
   </tr>
   <!-- BEGINELSE -->
-    {L_buddy_request_none}
+  <tr>
+    <td colspan="4">
+      {L_buddy_request_none}
+    </td>
+  </tr>
   <!-- END buddy -->
 
   <tr>
