--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -1,101 +1,133 @@
 <h1>{L_sys_dark_matter}</h1>
 <table width="519">
-  <tr>
-    <td align=justify>
-      <img src="./design/images/DMaterie.jpg" width="120" height="120" class="fr" style="margin: 7px">
-      <h2>{L_sys_dark_matter_description_header}</h2>
+
+  <tr class="c_j">
+    <th>
+      {L_sys_dark_matter_what_header}
+    </th>
+  </tr>
+  <tr class="c_j">
+    <td>
+      <div style="display: table-row; position: relative; margin: 7px;">
+        <img src="design/images/DMaterie.jpg" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
+        {UNIT_DESCRIPTION}
+      </div>
+    </td>
+  </tr>
+
+  <tr class="c_j">
+    <th>
+    {L_sys_dark_matter_description_header}
+    </th>
+  </tr>
+  <tr class="c_j">
+    <td>
       {L_sys_dark_matter_description_text}
-      <h2>{L_sys_dark_matter_obtain_header}</h2>
+     </td>
+  </tr>
+  <tr class="c_j">
+    <th>
+      {L_sys_dark_matter_obtain_header}
+    </th>
+  </tr>
+  <tr class="c_j">
+    <td>
       {L_sys_dark_matter_obtain_text}
 
       <!-- IF URL_DARK_MATTER --><br /><br />{L_sys_dark_matter_purchase_url_description} <a href="{URL_DARK_MATTER}"><span class="link">{L_sys_dark_matter_purchase_url_get}</span></a>.<!-- ENDIF -->
-
-      <!-- IF .payment_module -->
-      <form method="POST">
-        <h2>{L_sys_dark_matter_purchase}</h2>
-        {L_sys_dark_matter_purchase_text_cost} <span class="ok">{C_payment_lot_size} {L_sys_dark_matter_sh}</span>
-        {L_sys_dark_matter_purchase_text_unit} <span class="notice">{C_payment_lot_price} {C_payment_currency_default}</span>.
-        {L_sys_dark_matter_purchase_text_end}
-
-        <h3>{L_sys_dark_matter_purchase_step1}</h3>
-
-        <!-- IF DARK_MATTER -->
-          {L_sys_dark_matter_purchase_amount} <span class="ok">{DARK_MATTER}</span>
-          <input type="hidden" name="dark_matter" id="dark_matter_amount" value="{DARK_MATTER}">
-        <!-- ELSE -->
-          <span class="notice">{L_sys_dark_matter_purchase_step1_text}</span><br /><br/>
-          {L_sys_dark_matter_purchase_amount}
-          <select name="dark_matter">
-            <!-- BEGIN dm_amount -->
-              <option value="{dm_amount.VALUE}"<!-- IF dm_amount.VALUE == DARK_MATTER --> selected<!-- ENDIF -->>{dm_amount.VALUE}</value>
-            <!-- END dm_amount -->
-          </select>
-        <!-- ENDIF -->
-        <br /><br/>
-
-        <!-- IF PAYMENT_MODULE -->
-          {L_sys_dark_matter_purchase_payment_selected}
-          <!-- BEGIN payment_module -->
-            <!-- IF payment_module.ID == PAYMENT_MODULE -->
-              <span class="ok">"{payment_module.NAME}"</span> <input type="hidden" name="payment_module" id="dark_matter_module" value="{payment_module.ID}">
-            <!-- ENDIF -->
-          <!-- END payment_module -->
-        <!-- ELSE -->
-          {L_sys_dark_matter_purchase_select}
-          <select name="payment_module">
-            <!-- BEGIN payment_module -->
-            <option value="{payment_module.ID}">{payment_module.NAME}</option>
-            <!-- END payment_module -->
-          </select>
-        <!-- ENDIF -->
-        <br/><br/>
-
-        <!-- IF PAY_LINK -->
-          <h3>{L_sys_dark_matter_purchase_step2}</h3>{C_adv_conversion_code_payment}
-          <span class="notice">{L_sys_dark_matter_purchase_step2_text}</span><br /><br/>
-
-          <input class="fr" type="submit" value="{L_sys_dark_matter_purchase_reset}" onclick="jQuery('#dark_matter_amount').val('');jQuery('#dark_matter_module').val('');">
-      </form>
-          <!-- IF PAY_LINK_METHOD == 'LINK' -->
-            <script type="text/javascript">
-              function make_payment_popup()
-              {
-                this.open = function(ob)
-                {
-                  $(ob).hide();
-                  $('<span id="psload">{LA_sys_dark_matter_purchase_in_progress}</span>').insertAfter(ob);
-                  var win = window.open('{PAY_LINK}', 'PayStation', 'width=850px, height=550px, scrollbars=yes, status=no');
-                  setTimeout(function () 
-                  {
-                    if(win.closed)
-                    {
-                      $('#psload').remove();
-                      $(ob).show();
-                    }
-                    else
-                    {
-                      setTimeout(arguments.callee,500);
-                    }
-                  }, 500);
-                }
-              }
-              payment_popup = new make_payment_popup;
-            </script>
-
-            <span class="fl"><input type="button" value="{L_sys_dark_matter_purchase_pay}" onclick="payment_popup.open(this);return false;"></span>
-          <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
-            <form action="{PAY_LINK}" method="{PAY_LINK_METHOD}">
-              <!-- BEGIN pay_link_data -->
-                <input type="hidden" name="{pay_link_data.FIELD}" value="{pay_link_data.VALUE}">
-              <!-- END pay_link_data -->
-              <span class="fl"><input type="submit" value="{L_sys_dark_matter_purchase_pay}"></span>
-            </form>
-          <!-- ENDIF -->
-        <!-- ELSE -->
-          <input type="submit" name="payment_validate" value="{L_sys_dark_matter_purchase_confirm}">
-        <!-- ENDIF -->
-
-      <!-- ENDIF -->
     </td>
   </tr>
+  <!-- IF .payment_module -->
+    <tr class="c_j">
+      <th>
+        {L_sys_dark_matter_purchase}
+      </th>
+    </tr>
+    <tr class="c_j">
+      <td>
+      <form method="POST">
+          {L_sys_dark_matter_purchase_text_cost} <span class="ok">{C_payment_lot_size} {L_sys_dark_matter_sh}</span>
+          {L_sys_dark_matter_purchase_text_unit} <span class="notice">{C_payment_lot_price} {C_payment_currency_default}</span>.
+          {L_sys_dark_matter_purchase_text_end}
+
+          <h3>{L_sys_dark_matter_purchase_step1}</h3>
+
+          <!-- IF DARK_MATTER -->
+            {L_sys_dark_matter_purchase_amount} <span class="ok">{DARK_MATTER}</span>
+            <input type="hidden" name="dark_matter" id="dark_matter_amount" value="{DARK_MATTER}">
+          <!-- ELSE -->
+            <span class="notice">{L_sys_dark_matter_purchase_step1_text}</span><br /><br/>
+            {L_sys_dark_matter_purchase_amount}
+            <select name="dark_matter">
+              <!-- BEGIN dm_amount -->
+                <option value="{dm_amount.VALUE}"<!-- IF dm_amount.VALUE == DARK_MATTER --> selected<!-- ENDIF -->>{dm_amount.VALUE}</value>
+              <!-- END dm_amount -->
+            </select>
+          <!-- ENDIF -->
+          <br /><br/>
+
+          <!-- IF PAYMENT_MODULE -->
+            {L_sys_dark_matter_purchase_payment_selected}
+            <!-- BEGIN payment_module -->
+              <!-- IF payment_module.ID == PAYMENT_MODULE -->
+                <span class="ok">"{payment_module.NAME}"</span> <input type="hidden" name="payment_module" id="dark_matter_module" value="{payment_module.ID}">
+              <!-- ENDIF -->
+            <!-- END payment_module -->
+          <!-- ELSE -->
+            {L_sys_dark_matter_purchase_select}
+            <select name="payment_module">
+              <!-- BEGIN payment_module -->
+              <option value="{payment_module.ID}">{payment_module.NAME}</option>
+              <!-- END payment_module -->
+            </select>
+          <!-- ENDIF -->
+          <br/><br/>
+
+          <!-- IF PAY_LINK -->
+            <h3>{L_sys_dark_matter_purchase_step2}</h3>{C_adv_conversion_code_payment}
+            <span class="notice">{L_sys_dark_matter_purchase_step2_text}</span><br /><br/>
+
+            <input class="fr" type="submit" value="{L_sys_dark_matter_purchase_reset}" onclick="jQuery('#dark_matter_amount').val('');jQuery('#dark_matter_module').val('');">
+      </form>
+            <!-- IF PAY_LINK_METHOD == 'LINK' -->
+              <script type="text/javascript">
+                function make_payment_popup()
+                {
+                  this.open = function(ob)
+                  {
+                    $(ob).hide();
+                    $('<span id="psload">{LA_sys_dark_matter_purchase_in_progress}</span>').insertAfter(ob);
+                    var win = window.open('{PAY_LINK}', 'PayStation', 'width=850px, height=550px, scrollbars=yes, status=no');
+                    setTimeout(function ()
+                    {
+                      if(win.closed)
+                      {
+                        $('#psload').remove();
+                        $(ob).show();
+                      }
+                      else
+                      {
+                        setTimeout(arguments.callee,500);
+                      }
+                    }, 500);
+                  }
+                }
+                payment_popup = new make_payment_popup;
+              </script>
+
+              <span class="fl"><input type="button" value="{L_sys_dark_matter_purchase_pay}" onclick="payment_popup.open(this);return false;"></span>
+            <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
+              <form action="{PAY_LINK}" method="{PAY_LINK_METHOD}">
+                <!-- BEGIN pay_link_data -->
+                  <input type="hidden" name="{pay_link_data.FIELD}" value="{pay_link_data.VALUE}">
+                <!-- END pay_link_data -->
+                <span class="fl"><input type="submit" value="{L_sys_dark_matter_purchase_pay}"></span>
+              </form>
+            <!-- ENDIF -->
+          <!-- ELSE -->
+            <input type="submit" name="payment_validate" value="{L_sys_dark_matter_purchase_confirm}">
+          <!-- ENDIF -->
+      </td>
+    </tr>
+  <!-- ENDIF -->
 </table>
