--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -71,10 +71,11 @@ td.error_message
   background-color     : #40557E;
 }
 
-th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c
+td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l th, tr.c_r th, tr.c_c th, tr.c_j th
 {
   font-weight          : bold;
-  background-image     : url(img/bg1.gif);
+  background-image     : url("images/table_th_background.png");
+  background-repeat:  repeat-x;
 }
 /*
 th, td.c_l, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
@@ -82,26 +83,41 @@ th, td.c_l, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
   text-align           : center;
 }
 */
-.c_c, th.c_c, td.c_c, tr.c_c td, tr.c_c th, .cell_center, tr.cell_center td, tr.cell_center th
-{
-  text-align: center;
-}
-
-.c_l, th.c_l, td.c_l, tr.c_l td, tr.c_l th, .cell_left, tr.cell_left td, tr.cell_left th, td.c
+/*
+tr.c_l td, tr.c_l th, tr.cell_left td, tr.cell_left th, td.c
 {
   text-align: left;
 }
-
-.c_r, th.c_r, td.c_r, tr.c_r td, tr.c_r th, .cell_right, tr.cell_right td, tr.cell_right th
+tr.c_r td, tr.c_r th, tr.cell_right td, tr.cell_right th
 {
   text-align: right;
 }
+tr.c_c td, tr.c_c th, tr.cell_center td, tr.cell_center th
+{
+  text-align: center;
+}
+tr.c_j td, tr.c_j th, tr.cell_justify td, tr.cell_justify th
+{
+  text-align: justify;
+}
+*/
 
+/*
+tr.c_j td, tr.c_j th, tr.cell_justify td, tr.cell_justify th
+,
+th.c_j, td.c_j
+,
+.cell_justify, .c_j
+{
+  text-align: justify;
+}
+*/
 td.l
 {
   vertical-align       : top;
   padding              : 3px;
-  background-image     : url(img/bg2.gif);
+/*  background-image     : url("images/table_th_background.png");*/
+  background-image     : url("img/bg2.gif");
 }
 
 table table
@@ -188,7 +204,9 @@ h1
 
 #left_menu th {
   color: #63698c;
-  background-image: url(img/bg1.gif);
+/*  background-image: url(img/bg1.gif);*/
+  background-image     : url("images/table_th_background.png");
+  background-repeat: repeat-x;
   background-color: #212c42;
   text-align: center;
 }
