MENU-feat-35a12.21: Adding icons to menu

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -8,6 +8,7 @@
         <!-- IF menu.TITLE --> title="{menu.TITLE}"<!-- ELSEIF menu.ALT --> title="{menu.ALT}"<!-- ENDIF -->
       >
         <!-- IF menu.LINK --><a href="{menu.LINK}"<!-- IF menu.BLANK --> target="_blank"<!-- ENDIF -->><!-- ENDIF -->
+        <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" /><!-- ENDIF -->
         <!-- IF menu.SPAN --><span class="{menu.SPAN}"><!-- ENDIF -->
         <!-- IF menu.ID --><span id="{menu.ID}"><!-- ENDIF -->
         <!-- IF menu.LEVEL == 'header' && menu.LINK -->[&nbsp;<!-- ENDIF -->
