--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -8,19 +8,26 @@
         <!-- IF menu.TITLE --> title="{menu.TITLE}"<!-- ELSEIF menu.ALT --> title="{menu.ALT}"<!-- ENDIF -->
       >
         <!-- IF menu.LINK --><a href="{menu.LINK}"<!-- IF menu.BLANK --> target="_blank"<!-- ENDIF -->><!-- ENDIF -->
-        <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" /><!-- ENDIF -->
-        <!-- IF menu.SPAN --><span class="{menu.SPAN}"><!-- ENDIF -->
-        <!-- IF menu.ID --><span id="{menu.ID}"><!-- ENDIF -->
-        <!-- IF menu.LEVEL == 'header' && menu.LINK -->[&nbsp;<!-- ENDIF -->
 
-        <!-- IF menu.TYPE == 'image' -->
-        <img border="0" src="{menu.ITEM}"<!-- IF menu.ALT --> alt="{menu.ALT}"<!-- ELSEIF menu.TITLE --> alt="{menu.TITLE}"<!-- ENDIF -->/>
-        <!-- ELSE -->
-        {menu.ITEM}
-        <!-- ENDIF -->
+          <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" /><!-- ENDIF -->
+          <!-- IF menu.SPAN -->
+            <span class="{menu.SPAN}">
+          <!-- ELSEIF menu.ID || menu.LINK -->
+            <span id="{menu.ID}">
+          <!-- ENDIF -->
 
-        <!-- IF menu.LEVEL == 'header' && menu.LINK -->&nbsp;]<!-- ENDIF -->
-        <!-- IF menu.SPAN || (menu.ID && menu.LINK) --></span><!-- ENDIF -->
+            <!-- IF menu.LEVEL == 'header' && menu.LINK -->[&nbsp;<!-- ENDIF -->
+
+              <!-- IF menu.TYPE == 'image' -->
+              <img border="0" src="{menu.ITEM}"<!-- IF menu.ALT --> alt="{menu.ALT}"<!-- ELSEIF menu.TITLE --> alt="{menu.TITLE}"<!-- ENDIF -->/>
+              <!-- ELSE -->
+              {menu.ITEM}
+              <!-- ENDIF -->
+
+            <!-- IF menu.LEVEL == 'header' && menu.LINK -->&nbsp;]<!-- ENDIF -->
+
+          <!-- IF menu.SPAN || menu.ID || menu.LINK --></span><!-- ENDIF -->
+
         <!-- IF menu.LINK --></a><!-- ENDIF -->
       </{$TX}>
     </tr>
