MENU-misc-35a12.23: Added new property STYLE for direct support of CSS-styles in menu elements

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -12,6 +12,8 @@
           <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" /><!-- ENDIF -->
           <!-- IF menu.SPAN -->
             <span class="{menu.SPAN}">
+          <!-- ELSEIF menu.STYLE -->
+            <span style="{menu.STYLE}">
           <!-- ELSEIF menu.ID || menu.LINK -->
             <span id="{menu.ID}">
           <!-- ENDIF -->
