--- a/design/templates/OpenGame/records.tpl.html
+++ b/design/templates/OpenGame/records.tpl.html
@@ -1,11 +1,18 @@
 <h1>{L_rec_title}</h1>
 <table width="590">
 <!-- BEGIN records -->
-  <!-- IF records.HEADER --><!-- DEFINE $CELL_TAG = 'th' --><!-- ELSE --><!-- DEFINE $CELL_TAG = 'td' --><!-- ENDIF -->
+  <!-- IF records.HEADER -->
+    <tr>
+      <th class="c_l">{records.UNIT}</th>
+      <th class="c_c">{L_sys_player}</th>
+      <th class="c_r">{records.COUNT}</th>
+    </tr>
+  <!-- ELSE -->
   <tr>
-    <{$CELL_TAG} width="290" class="c_c">{records.UNIT}</{$CELL_TAG}>
-    <{$CELL_TAG} width="212" class="c_c">{records.USER}</{$CELL_TAG}>
-    <{$CELL_TAG} width="72" class="c_r">{records.COUNT}</{$CELL_TAG}>
+    <td class="c_l">{records.UNIT}</td>
+    <td class="c_c">{records.USER}</td>
+    <td class="c_r">{records.COUNT}</td>
   </tr>
+  <!-- ENDIF -->
 <!-- END records -->
 </table>
