MENU-fix-35b4: Sturctures link name now stops changing from screen to screen in some localizations

--- a/design/templates/OpenGame/admin/md5enc.tpl.html
+++ b/design/templates/OpenGame/admin/md5enc.tpl.html
@@ -2,7 +2,7 @@
 <form method="post">
   <table>
     <tr>
-      <td class="c_l">{L_adm_tool_md5_password}</td>
+      <td class="c_l">{L_sys_password}</td>
       <td class="c_l">
         <input type="text" name="string" value="{STRING}">
         <input type="submit" name="ok" value="{L_adm_tool_md5_encode}">
