--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -21,7 +21,7 @@
         <input name="username" type="text" value="" class="log_input" />
       </div>
       <div class="log_input_wrapper">
-        {L_Password}<br>
+        {L_sys_password}<br>
         <input name="password" type="password" value="" class="log_input" /> 
       </div><br>
       <div class="log_input_wrapper">
