--- a/design/templates/OpenGame/registry_form.tpl.html
+++ b/design/templates/OpenGame/registry_form.tpl.html
@@ -21,7 +21,7 @@
         </tr>
 
         <tr>
-          <th>{L_neededpass}:</th>
+          <th>{L_sys_password}:</th>
           <th><input name="password" type="password" size="20" maxlength="20" /></th>
         </tr>
 
