--- a/design/css/global.css
+++ b/design/css/global.css
@@ -138,7 +138,7 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 
 .error
 {
-  text-align: left;
+/*  text-align: left;*/
   color: red;
 }
 
@@ -445,7 +445,24 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 {
   font-weight: normal;
 }
-
+/*
+tr.c_l > th, tr.c_l > td
+{
+  text-align: left;
+}
+tr.c_r > th, tr.c_r > td
+{
+  text-align: right;
+}
+tr.c_c > th, tr.c_c > td, td.c
+{
+  text-align: center;
+}
+tr.c_j > th, tr.c_j > td
+{
+  text-align: justify;
+}
+*/
 th.c_l, td.c_l
 {
   text-align: left;
