UBE-feat-36a0.0: UBEv4 initial commit

--- a/design/templates/OpenGame/simulator.tpl.html
+++ b/design/templates/OpenGame/simulator.tpl.html
@@ -34,7 +34,8 @@ function sym_set_all(group, value)
 --></script>
 
 <h2>{COE_combatSimulator}</h2>
-<form action='simulator.php' method='post'>
+<form action='simulator2.php' method='post'>
+Симулятор <input type="checkbox" name="simulator" />
   <table>
     <tr>
       <td class="c">&nbsp;</td>
