--- a/design/templates/OpenGame/simulator.tpl.html
+++ b/design/templates/OpenGame/simulator.tpl.html
@@ -34,8 +34,9 @@ function sym_set_all(group, value)
 --></script>
 
 <h2>{COE_combatSimulator}</h2>
-<form action='simulator2.php' method='post'>
-Симулятор <input type="checkbox" name="simulator" />
+<form action='simulator.php' method='post'>
+{L_ube_simulation} <input type="checkbox" name="simulator" checked="true" />
+Проверка записи/чтения <input type="checkbox" name="reload" />
   <table>
     <tr>
       <td class="c">&nbsp;</td>
