UBE-misc-36a0.10: All links to rw.php replaced with new ones

--- a/design/templates/OpenGame/viewreport.tpl.html
+++ b/design/templates/OpenGame/viewreport.tpl.html
@@ -1,5 +1,5 @@
 <br />
-<form method="get" action="rw.php">
+<form method="get" action="index.php?page=battle_report">
   <table width="517">
     <tr>
       <td class="c">
@@ -7,11 +7,11 @@
         <a class="fr link" href="messages.php?mode=show&messcat=3">{L_cr_view_my}</a>
       </td>
     </tr>
-  
+
     <tr>
       <th>
         <span class="fl">{L_cr_view_prompt}</span>
-        <input type="text" name="raport" maxlength=32 size=35>
+        <input type="text" name="cypher" maxlength=32 size=35>
         <input class="fr" type="submit" value="{L_cr_view_button}">
       </th>
     </tr>
