--- a/design/templates/OpenGame/ube_combat_report.tpl.html
+++ b/design/templates/OpenGame/ube_combat_report.tpl.html
@@ -316,5 +316,7 @@
   <!-- END fleet -->
 </table>
 <!-- END round -->
-<br />
-{L_ube_report_info_generate} {MICROTIME}
+
+<!-- IF MICROTIME -->
+  <br />{L_ube_report_info_generate} {MICROTIME}
+<!-- ENDIF -->
