INT-misc-36a0.11: Fixed wrong 'my reports' link on battle report view page

--- a/design/templates/OpenGame/viewreport.tpl.html
+++ b/design/templates/OpenGame/viewreport.tpl.html
@@ -1,10 +1,11 @@
 <br />
-<form method="get" action="index.php?page=battle_report">
+<form method="get" action="index.php">
+  <input type="hidden" name="page" value="battle_report">
   <table width="517">
     <tr>
       <td class="c">
         <span class="fl">{L_cr_view_title}</span>
-        <a class="fr link" href="messages.php?mode=show&messcat=3">{L_cr_view_my}</a>
+        <a class="fr link" href="messages.php?mode=show&message_class=3">{L_cr_view_my}</a>
       </td>
     </tr>
 
