--- a/design/templates/OpenGame/ube_combat_report.tpl.html
+++ b/design/templates/OpenGame/ube_combat_report.tpl.html
@@ -1,12 +1,4 @@
-﻿<style>
-.transparent_cell
-{
-  background-color: transparent;
-  border: 0px;
-}
-</style>
-
-<table>
+﻿<table>
   <tr>
     <td class="c_c transparent_cell" colspan="3">
       <h2>{L_ube_report_info_main}</h2>
