MOD-feat-36a0.18: Support for module unit_captain-0a0 in 'Empire Overview' page and own flying fleets lists. Also misc fixes

--- a/design/templates/OpenGame/fleet_javascript.tpl.html
+++ b/design/templates/OpenGame/fleet_javascript.tpl.html
@@ -9,7 +9,7 @@ var fleets = Array();
   ], ['{fleets.METAL}', '{fleets.CRYSTAL}', '{fleets.DEUTERIUM}']];
 <!-- END fleets -->
 var res_names = ['{L_sys_metal}', '{L_sys_crystal}', '{L_sys_deuterium}'];
-jQuery.extend(language, {sys_ships: '{L_sys_ships}', sys_resources: '{L_sys_resources}', sys_capacity: '{L_sys_capacity}'});
+jQuery.extend(language, {sys_fleet_composition: '{L_sys_fleet_composition}', sys_ships: '{L_sys_ships}', sys_resources: '{L_sys_resources}', sys_capacity: '{L_sys_capacity}'});
 
 var SHIP_SPY = {D_SHIP_SPY};
 
