--- a/design/templates/OpenGame/ali_admin_mail.tpl.html
+++ b/design/templates/OpenGame/ali_admin_mail.tpl.html
@@ -14,7 +14,7 @@
 	</tr>
 
 	<tr>
-	  <th>{Text_mail} (<span id="cntChars">0</span> / 5000 {characters})</th>
+	  <th>{Text_mail} (<span id="cntChars">0</span> / 5000 {ali_req_characters})</th>
 	  <th>
 	    <textarea name="text" cols="60" rows="10" onkeyup="javascript:cntchar(5000)"></textarea>
 	  </th>
